# proc

./: Cargo.toml  README.md
proc-common/: Cargo.toml
proc-common/src/: lib.rs  macros.rs  procutils.rs  testutils.rs
proc0/: Cargo.toml
proc0/src/: attribute.rs  lib.rs
proc1/: Cargo.toml
proc1/src/: lib.rs
proc2/: Cargo.toml
proc2/src/: lib.rs  tests.rs
src/: lib.rs
test/attribute/fail/: empty_argument_list.rs  empty_argument_list.stderr  more_than_one_argument.rs  more_than_one_argument.stderr  mut_ref_self_argument.rs  mut_ref_self_argument.stderr  ref_self_argument.rs  ref_self_argument.stderr  self_argument.rs  self_argument.stderr
test/attribute/pass/: success_output.rs
test/function/fail/: empty_argument_list.rs  empty_argument_list.stderr  more_than_one_argument.rs  more_than_one_argument.stderr  mut_self_argument.rs  mut_self_argument.stderr  ref_self_argument.rs  ref_self_argument.stderr  self_argument.rs  self_argument.stderr
test/function/pass/: success_input.rs  success_output.rs
