[package]
name = "proc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
proc-macro2 = "1.0.32"
proc0 = { path = "./proc0" }
proc-common = { path = "./proc-common" }
syn = { version = "1.0.81", features = [ "full", "extra-traits" ] }
quote = "1.0.10"
