[package]
name = "proc-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.32"
syn = { version = "2.0.9", features = [ "full", "extra-traits" ] }
quote = "1.0.10"
proc-macro-crate = "1.1.0"
trybuild = "1.0.52"
