[package]
name = "proc1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
syn = { version = "2.0.13", features = [ "full", "extra-traits" ] }
quote = "1.0.10"
syntax-abuse = { git = "https://github.com/Alex-Shand/syntax-abuse" }
proc0 = { path = "../proc0" }
proc-common = { path = "../proc-common" }